src/scss/styles.scss
@import '~@angular/cdk/overlay-prebuilt.css';
@import "./variables";

body {
  margin: 0;
  overflow: hidden;
  height: 100vh;
  font-size: 14px;
  color: whitesmoke;
  font-family: Roboto, "Helvetica Neue", sans-serif;

  a {
    color: whitesmoke;
    text-decoration: none;
  }
}

::-webkit-scrollbar {
  width: $scrollbar-width; /* width of the entire scrollbar */
}

::-webkit-scrollbar-track {
  background: $primary-color; /* color of the tracking area */
  border-radius: 4px;
}

/*::-webkit-scrollbar-thumb {
  background-color: $primary-color-light; !* color of the scroll thumb *!
}*/

.tg-container {
  max-width: 1275px;
  display: flex;
  flex-direction: column;
  flex: 1;
  padding: $sm-padding $md-padding 0 $md-padding;

  > *:not(router-outlet) {
    &:not(:last-child){
      margin-bottom: $md-margin;
    }
  }
}

.title {
  font-size: 1.75rem;
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: 700;

  &.small {
    font-size: 1rem;
  }
}

.subtitle {
  font-size: 0.85rem;
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: 400;
}

.tg-badge {
  pointer-events: none;
  $size: 1rem;
  position: absolute;
  top: -25%;
  left: 70%;
  font-size: 0.7rem;
  line-height: $size;
  border-radius: 50%;
  width: $size;
  height: $size;
  background-color: #ff0000;
  color: #ffffff;
  text-align: center;

  &.hidden {
    display: none;
  }
}


.filters {
  .section {
    padding: $md-padding;

    &:not(:last-child) {
      border-bottom: 1px solid $primary-color;
    }
  }
}

